Changed image to stop overlapping text

--- a/input.css
+++ b/input.css
@@ -38,12 +38,15 @@ header {
 /* Hero section */
 .hero{
   display:flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height:60vh;
   background-color: #F5A623;
   color: white;
   text-align:center;
+  padding:20px;
+  position: relative;
 }
 
 .hero h1{
@@ -57,6 +60,11 @@ header {
   margin-bottom: 20px;
 }
 
+.hero-text {
+  z-index: 1; /* Ensure text appears above the image */
+  margin-bottom: 30px; /* Space between text and image */
+}
+
 .typewriter-text {
   display: inline-block;
   font-size: 1.5rem;
@@ -68,17 +76,12 @@ header {
   animation: typing 6s steps(30) 1s forwards, blink 0.75s step-end infinite;
 }
 
-.hero-text {
-  z-index: 1; /* Ensure text appears above the image */
-  margin-bottom: 30px; /* Space between text and image */
-}
+/* Profile Image */
 
 .Profile{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: -100px auto 40px auto;
-  text-align: center;
+  z-index: 1;
+  margin-top: 20px;
 }
 
 .profile-img {
@@ -86,7 +89,7 @@ header {
   width: 400px;
   height: 400px;
   object-fit: cover;
-  margin-top: 20px;
+  border: 5px solid #F5A623;
 }
 
 a:link, a:visited{
